@@ -1867,8 +1867,8 @@ psm->te->h = headerLink(fi->h);
 			/* XXX this is headerCopy w/o headerReload() */
 			psm->oh = headerNew();
 
-			for (hi = headerInitIterator(oh);
-			     headerNextIterator(hi, &he->tag, &he->t, &he->p, &he->c);
+			for (hi = headerInitExtension(oh);
+			     headerNextExtension(hi, he, 0);
 			     he->p.ptr = headerFreeData(he->p.ptr, he->t))
 			{
 			    if (he->tag == RPMTAG_ARCHIVESIZE)
